// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio Component snapshot testing should render the component 1`] = `
<Audio
  onUpload={[MockFunction]}
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={
      Array [
        <ForwardRef(InternalButton)
          onClick={[Function]}
        >
          Cancel
        </ForwardRef(InternalButton)>,
        <ForwardRef(InternalButton)
          onClick={[Function]}
          type="primary"
        >
          Submit
        </ForwardRef(InternalButton)>,
      ]
    }
    okType="primary"
    onCancel={[Function]}
    visible={false}
    width="800px"
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={
        Array [
          <ForwardRef(InternalButton)
            onClick={[Function]}
          >
            Cancel
          </ForwardRef(InternalButton)>,
          <ForwardRef(InternalButton)
            onClick={[Function]}
            type="primary"
          >
            Submit
          </ForwardRef(InternalButton)>,
        ]
      }
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="ant-zoom"
      visible={false}
      width="800px"
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Dialog>
  </Modal>
  <Space
    direction="vertical"
  >
    <div
      className="ant-space ant-space-vertical"
      style={Object {}}
    >
      <Item
        className="ant-space-item"
        direction="vertical"
        index={0}
        key="ant-space-item-0"
        marginDirection="marginRight"
        wrap={false}
      />
      <Item
        className="ant-space-item"
        direction="vertical"
        index={1}
        key="ant-space-item-1"
        marginDirection="marginRight"
        wrap={false}
      >
        <div
          className="ant-space-item"
          style={Object {}}
        >
          <Space
            direction="horizontal"
          >
            <div
              className="ant-space ant-space-horizontal ant-space-align-center"
              style={Object {}}
            >
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={0}
                key="ant-space-item-0"
                marginDirection="marginRight"
                wrap={false}
              />
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={1}
                key="ant-space-item-1"
                marginDirection="marginRight"
                wrap={false}
              >
                <div
                  className="ant-space-item"
                  style={
                    Object {
                      "marginRight": 8,
                    }
                  }
                >
                   
                </div>
              </Item>
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={2}
                key="ant-space-item-2"
                marginDirection="marginRight"
                wrap={false}
              >
                <div
                  className="ant-space-item"
                  style={Object {}}
                >
                  <Button
                    onClick={[Function]}
                  >
                    <Wave>
                      <button
                        className="ant-btn"
                        onClick={[Function]}
                        type="button"
                      >
                        <LoadingIcon
                          existIcon={false}
                          loading={false}
                          prefixCls="ant-btn"
                        >
                          <CSSMotion
                            motionName="ant-btn-loading-icon-motion"
                            onAppearActive={[Function]}
                            onAppearStart={[Function]}
                            onEnterActive={[Function]}
                            onEnterStart={[Function]}
                            onLeaveActive={[Function]}
                            onLeaveStart={[Function]}
                            removeOnLeave={true}
                            visible={false}
                          >
                            <DomWrapper />
                          </CSSMotion>
                        </LoadingIcon>
                        <span
                          key=".0"
                        >
                          Select
                        </span>
                      </button>
                    </Wave>
                  </Button>
                </div>
              </Item>
            </div>
          </Space>
        </div>
      </Item>
    </div>
  </Space>
</Audio>
`;

exports[`Audio Component snapshot testing should render the component with url 1`] = `
<Audio
  onUpload={[MockFunction]}
  url="dummyUrl"
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={
      Array [
        <ForwardRef(InternalButton)
          onClick={[Function]}
        >
          Cancel
        </ForwardRef(InternalButton)>,
        <ForwardRef(InternalButton)
          onClick={[Function]}
          type="primary"
        >
          Submit
        </ForwardRef(InternalButton)>,
      ]
    }
    okType="primary"
    onCancel={[Function]}
    visible={false}
    width="800px"
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={
        Array [
          <ForwardRef(InternalButton)
            onClick={[Function]}
          >
            Cancel
          </ForwardRef(InternalButton)>,
          <ForwardRef(InternalButton)
            onClick={[Function]}
            type="primary"
          >
            Submit
          </ForwardRef(InternalButton)>,
        ]
      }
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      transitionName="ant-zoom"
      visible={false}
      width="800px"
      wrapClassName=""
    >
      <PortalWrapper
        visible={false}
      />
    </Dialog>
  </Modal>
  <Space
    direction="vertical"
  >
    <div
      className="ant-space ant-space-vertical"
      style={Object {}}
    >
      <Item
        className="ant-space-item"
        direction="vertical"
        index={0}
        key="ant-space-item-0"
        marginDirection="marginRight"
        wrap={false}
      >
        <div
          className="ant-space-item"
          style={
            Object {
              "marginBottom": 8,
            }
          }
        >
          <audio
            controls={true}
          >
            <source
              src="dummyUrl"
              type="audio/ogg"
            />
          </audio>
        </div>
      </Item>
      <Item
        className="ant-space-item"
        direction="vertical"
        index={1}
        key="ant-space-item-1"
        marginDirection="marginRight"
        wrap={false}
      >
        <div
          className="ant-space-item"
          style={Object {}}
        >
          <Space
            direction="horizontal"
          >
            <div
              className="ant-space ant-space-horizontal ant-space-align-center"
              style={Object {}}
            >
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={0}
                key="ant-space-item-0"
                marginDirection="marginRight"
                wrap={false}
              >
                <div
                  className="ant-space-item"
                  style={
                    Object {
                      "marginRight": 8,
                    }
                  }
                >
                  <Button
                    onClick={[Function]}
                  >
                    <Wave>
                      <button
                        className="ant-btn"
                        onClick={[Function]}
                        type="button"
                      >
                        <LoadingIcon
                          existIcon={false}
                          loading={false}
                          prefixCls="ant-btn"
                        >
                          <CSSMotion
                            motionName="ant-btn-loading-icon-motion"
                            onAppearActive={[Function]}
                            onAppearStart={[Function]}
                            onEnterActive={[Function]}
                            onEnterStart={[Function]}
                            onLeaveActive={[Function]}
                            onLeaveStart={[Function]}
                            removeOnLeave={true}
                            visible={false}
                          >
                            <DomWrapper />
                          </CSSMotion>
                        </LoadingIcon>
                        <span
                          key=".0"
                        >
                          Remove
                        </span>
                      </button>
                    </Wave>
                  </Button>
                </div>
              </Item>
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={1}
                key="ant-space-item-1"
                marginDirection="marginRight"
                wrap={false}
              >
                <div
                  className="ant-space-item"
                  style={
                    Object {
                      "marginRight": 8,
                    }
                  }
                >
                   
                </div>
              </Item>
              <Item
                className="ant-space-item"
                direction="horizontal"
                index={2}
                key="ant-space-item-2"
                marginDirection="marginRight"
                wrap={false}
              >
                <div
                  className="ant-space-item"
                  style={Object {}}
                >
                  <Button
                    onClick={[Function]}
                  >
                    <Wave>
                      <button
                        className="ant-btn"
                        onClick={[Function]}
                        type="button"
                      >
                        <LoadingIcon
                          existIcon={false}
                          loading={false}
                          prefixCls="ant-btn"
                        >
                          <CSSMotion
                            motionName="ant-btn-loading-icon-motion"
                            onAppearActive={[Function]}
                            onAppearStart={[Function]}
                            onEnterActive={[Function]}
                            onEnterStart={[Function]}
                            onLeaveActive={[Function]}
                            onLeaveStart={[Function]}
                            removeOnLeave={true}
                            visible={false}
                          >
                            <DomWrapper />
                          </CSSMotion>
                        </LoadingIcon>
                        <span
                          key=".0"
                        >
                          Select
                        </span>
                      </button>
                    </Wave>
                  </Button>
                </div>
              </Item>
            </div>
          </Space>
        </div>
      </Item>
    </div>
  </Space>
</Audio>
`;
